cabal-version:      2.4
name:               haskellGameOfLife
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Conway's Game of Life, in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ame
maintainer:         elliotdtx@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskellGameOfLife
    main-is:          Main.hs
    ghc-options:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base >=4.17.2.0
-- , gloss
    hs-source-dirs:   app
    default-language: Haskell2010
